kubernetes/apps/default/home-assistant/app/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
ports:
  - name: http
    port: 8123
    protocol: TCP
endpoints:
  - addresses:
      - 10.69.40.4
