kubernetes/apps/default/home-assistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
